# Atividades_Processamento_Grafico

./: README.md
CMake_branch/: CMakePresets.json
CMake_branch/Dino_game/: CMakeLists.txt
CMake_branch/Dino_game/src/: Source.cpp
CMake_branch/Lista_1/: CMakeLists.txt  Imagens_poligonos.md  Questoes_discursivas.md  problemas.txt
CMake_branch/Lista_1/src/: Exercicio_5.cpp  Exercicio_6.cpp  Exercicio_7.cpp  Exercicio_8.cpp  Exercicio_9.cpp
CMake_branch/Lista_2/: CMakeLists.txt  Exercícios.md
CMake_branch/Lista_2/src/: lista_2_ex_1_e_2.cpp  lista_2_ex_2.cpp  lista_2_ex_3.cpp  lista_2_ex_4.cpp  lista_2_ex_5.cpp
CMake_branch/Ola_triangulo/: CMakeLists.txt  Ola_triangulo.md
CMake_branch/Ola_triangulo/src/: glad.h  main.cpp
CMake_branch/sprites_and_textures/: CMakeLists.txt
CMake_branch/sprites_and_textures/src/: Sprites.cpp  glad.c  textures.cpp
Caballero_na_pedra_game/: VSCode-SETUP.md
Caballero_na_pedra_game/Caballero_na_pedra/: README.md
PG2024-2-main/HelloTriangle - Sprites/: Source.cpp  Source_2.cpp  Source_3.cpp  Source_4.cpp  notes.txt
PG2024-2-main/HelloTriangle - Textures/: Source.cpp
Processamento_de_imagens_no_openCV/: Hello_Image.py  Hello_pixels.py  OpenCV_logo.py  README.MD  Standard_name.avi  SuperTeste.avi  Tutorial_openCV.py  assidente.avi  drawing_in_opencv.py  file_do_trabalho.py  getting_video.py  jojo_teste.jpg:Zone.Identifier  playing_viedo.py  saving_a_video.py  teste.avi  teste2.avi
Processamento_de_imagens_no_openCV/Trabalho_GB/: File_do_trabalho.py  README.MD
Windows_Setup/Atividade_introdutoria/: Hello_triangle.md
Windows_Setup/Atividade_introdutoria/src/: Source.cpp
Windows_Setup/HelloTriangle - VSCode/: Source.cpp
Windows_Setup/Lista_1/: Exercicios_descritivos.md  ex5_Source.cpp
